--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
 <!--Jumbotron-->
 <div class="jumbotron text-center">
-  <h1>Company</h1> 
-  <p>We specialize in blablabla</p> 
+  <h1>Quique Corp.</h1> 
+  <p>SSDD</p> 
   <form class="form-inline">
-    <input type="email" class="form-control" size="50" placeholder="Email Address" required>
+    <input type="email" class="form-control" size="50" placeholder="Email" required>
     <button type="button" class="btn btn-danger">Subscribe</button>
   </form>
 </div>
