--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <h1>Quique Corp.</h1> 
   <p>SSDD</p> 
   <form class="form-inline">
-    <input type="email" class="form-control" size="50" placeholder="Email" required>
+    <input type="email" class="form-control" size="50" placeholder="Email Plz" required>
     <button type="button" class="btn btn-danger">Subscribe</button>
   </form>
 </div>
